# diffsig

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  diffsig  pyproject.toml
.github/workflows/: release.yml  release.yml.disabled  test-release.yml  test.yml
diffsig/: __main__.py  core.py
tests/: test_core.py
